--- a/GitHubApp/Base.lproj/Main.storyboard
+++ b/GitHubApp/Base.lproj/Main.storyboard
@@ -510,6 +510,21 @@ Select scope
             </objects>
             <point key="canvasLocation" x="3349.5999999999999" y="792.95352323838085"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="vpi-Cc-R4n">
+            <objects>
+                <viewController id="hIN-Zp-G70" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nYB-gc-cgF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="dh9-Pu-19l"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O0e-Ug-AWh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3350" y="1469"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="z2d-Qm-Fng">
             <objects>
