--- a/GitHubApp/Base.lproj/Main.storyboard
+++ b/GitHubApp/Base.lproj/Main.storyboard
@@ -121,26 +121,45 @@ Select scope
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="myCell" textLabel="9lt-N5-eFu" imageView="Cqh-La-Bmn" style="IBUITableViewCellStyleDefault" id="GOZ-fW-bz0" customClass="UserListCell" customModule="GitHubApp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="myCell" id="GOZ-fW-bz0" customClass="UserListCell" customModule="GitHubApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GOZ-fW-bz0" id="U4M-od-2qS">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9lt-N5-eFu">
-                                            <rect key="frame" x="111" y="0.0" width="248" height="79.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oC3-aU-AvF">
+                                            <rect key="frame" x="16" y="0.0" width="83" height="79.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="83" id="4xJ-Yl-jUT"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhu-b0-kDj">
+                                            <rect key="frame" x="122" y="29" width="237" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="loading" id="Cqh-La-Bmn">
-                                            <rect key="frame" x="16" y="0.0" width="80" height="79.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </imageView>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="PhF-zd-Vo1">
+                                            <rect key="frame" x="47.5" y="30" width="20" height="20"/>
+                                            <color key="color" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </activityIndicatorView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="oC3-aU-AvF" secondAttribute="bottom" id="8A4-mI-zVM"/>
+                                        <constraint firstItem="oC3-aU-AvF" firstAttribute="leading" secondItem="U4M-od-2qS" secondAttribute="leading" constant="16" id="8Ib-gx-eaG"/>
+                                        <constraint firstItem="oC3-aU-AvF" firstAttribute="centerX" secondItem="PhF-zd-Vo1" secondAttribute="centerX" id="QNL-1S-aUm"/>
+                                        <constraint firstItem="oC3-aU-AvF" firstAttribute="centerY" secondItem="PhF-zd-Vo1" secondAttribute="centerY" id="hMD-du-ESf"/>
+                                        <constraint firstItem="dhu-b0-kDj" firstAttribute="leading" secondItem="oC3-aU-AvF" secondAttribute="trailing" constant="23" id="lkd-t4-g7y"/>
+                                        <constraint firstItem="oC3-aU-AvF" firstAttribute="top" secondItem="U4M-od-2qS" secondAttribute="top" id="t2Y-wA-q8F"/>
+                                        <constraint firstItem="oC3-aU-AvF" firstAttribute="centerY" secondItem="dhu-b0-kDj" secondAttribute="centerY" id="va1-tG-Xwd"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="userImageLoadingIndicator" destination="PhF-zd-Vo1" id="sq9-fA-quC"/>
+                                    <outlet property="userImageView" destination="oC3-aU-AvF" id="VHd-Ot-ktA"/>
+                                    <outlet property="userNameLabel" destination="dhu-b0-kDj" id="5Gz-QC-pmX"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -172,7 +191,7 @@ Select scope
                     <viewLayoutGuide key="safeArea" id="mcR-Bt-cDs"/>
                 </view>
             </objects>
-            <point key="canvasLocation" x="1593" y="793"/>
+            <point key="canvasLocation" x="1592.8" y="792.95352323838085"/>
         </scene>
         <!--Repository-->
         <scene sceneID="PSs-YA-N2F">
@@ -536,7 +555,6 @@ Select scope
     <resources>
         <image name="back_icon" width="30" height="30"/>
         <image name="go_icon" width="30" height="30"/>
-        <image name="loading" width="380" height="378"/>
         <image name="maru" width="150" height="150"/>
         <image name="star" width="205" height="205"/>
     </resources>
