リポジトリ一覧画面のリポジトリ数に最初デフォルトで「数」と表示されていたのを削除

--- a/GitHubApp/Base.lproj/Main.storyboard
+++ b/GitHubApp/Base.lproj/Main.storyboard
@@ -381,7 +381,7 @@ Select scope
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dve-jV-hpu">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dve-jV-hpu">
                                         <rect key="frame" x="125" y="0.0" width="100" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="9ib-xE-szo"/>
