どこかのレイアウト変えてしまったらしい。

--- a/GitHubApp/Base.lproj/Main.storyboard
+++ b/GitHubApp/Base.lproj/Main.storyboard
@@ -543,12 +543,16 @@ Select scope
         <scene sceneID="z2d-Qm-Fng">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2ix-OZ-Ieo" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cPS-U7-fSw">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bAk-B4-PJW">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ggf-I4-Cve"/>
                     </connections>
